--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,12 @@
+@font-face {
+  font-family: "icones";
+  src: url(/assets/font/icones.ttf);
+}
+
 body {
   background-color: #1d232a;
   color: #fff;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "icones", sans-serif;
 }
 
 .cabecalho {
@@ -11,4 +16,166 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 8px 16px;
+}
+
+.cabecalho__menu i::before {
+  content: "\e904";
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.cabecalho__notificacao i::before {
+  content: "\e906";
+  font-size: 24px;
+}
+
+.cabecalho__logo {
+  width: 40px;
+}
+
+.menu-lateral {
+  display: flex;
+  flex-direction: column;
+  background-color: #15191c;
+  width: 75vw;
+  height: 100vh;
+  position: absolute;
+  left: -100vw;
+  transition: 0.5s all;
+}
+
+.menu-lateral--ativo {
+  left: 0;
+}
+
+.menu-lateral__logo {
+  align-self: center;
+  width: 110px;
+  padding: 16px;
+}
+
+.menu-lateral__link {
+  height: 64px;
+  color: #95999c;
+  padding-left: 64px;
+  display: flex;
+  align-items: center;
+}
+
+.menu-lateral__link--ativo {
+  color: #fff;
+  padding-left: 56px;
+  border-left: 8px solid #fff;
+}
+
+.menu-lateral__link::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  font-size: 24px;
+  position: absolute;
+  left: 24px;
+}
+
+.menu-lateral__link--inicio::before {
+  content: "\e902";
+}
+
+.menu-lateral__link--videos::before {
+  content: "\e90e";
+}
+
+.menu-lateral__link--picos::before {
+  content: "\e909";
+}
+
+.menu-lateral__link--integrantes::before {
+  content: "\e903";
+}
+
+.menu-lateral__link--camisas::before {
+  content: "\e900";
+}
+
+.menu-lateral__link--pinturas::before {
+  content: "\e90a";
+}
+
+.principal {
+  padding: 24px 16px;
+}
+
+.titulo-pagina {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.cartao {
+  width: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+  background-color: #2c343a;
+}
+
+.cartao__conteudo {
+  padding: 16px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.cartao__destaque {
+  grid-column: span 2;
+}
+
+.cartao__titulo {
+  font-size: 1.2rem;
+  font-weight: bold;
+  grid-column: span 2;
+}
+
+.cartao__perfil {
+  color: #95999c;
+  font-size: 0.9rem;
+  grid-column: span 2;
+}
+
+.cartao__info {
+  display: flex;
+  align-items: center;
+  color: #95999c;
+}
+
+.cartao__info--tempo::before {
+  content: "\e90c";
+  margin-right: 8px;
+}
+
+.cartao__info--visualizacao::before {
+  content: "\e90f";
+  margin-right: 8px;
+}
+
+.cartao__botao {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0480dc;
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 0.9rem;
+}
+
+.cartao__botao--play::before {
+  content: "\e90b";
+  font-size: 24px;
+}
+
+.cartao__botao--destaque {
+  width: 100%;
+  grid-column: span 2;
+}
+
+.cartao__botao--destaque::before {
+  margin-right: 8px;
 }
