Atualizando os cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,8 @@ body {
 
 .principal {
   padding: 24px 16px;
+  display: grid;
+  gap: 16px;
 }
 
 .titulo-pagina {
@@ -117,10 +119,15 @@ body {
   background-color: #2c343a;
 }
 
+.cartao--destaque {
+  margin-bottom: 16px;
+}
+
 .cartao__conteudo {
   padding: 16px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto 1fr;
+  gap: 8px;
 }
 
 .cartao__destaque {
@@ -164,6 +171,7 @@ body {
   height: 40px;
   border-radius: 10px;
   font-size: 0.9rem;
+  justify-self: flex-end;
 }
 
 .cartao__botao--play::before {
@@ -178,4 +186,14 @@ body {
 
 .cartao__botao--destaque::before {
   margin-right: 8px;
+}
+
+.secao {
+  display: grid;
+  gap: 16px;
+}
+
+.titulo-secao {
+  font-size: 1.2rem;
+  font-weight: bold;
 }
