--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,19 +10,25 @@ body {
   box-sizing: border-box;
 }
 
+@media screen and (min-width: 1440px) {
+  body {
+    display: grid;
+    grid-template-columns: auto 1fr;
+  }
+}
+
 .cabecalho {
-  align-items: center;
-  background-color: #15191c;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.16);
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  background-color: #15191c;
   padding: 8px 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
 }
 
 .cabecalho__menu i::before {
   content: "\e904";
   font-size: 24px;
-  cursor: pointer;
 }
 
 .cabecalho__notificacao i::before {
@@ -38,24 +44,75 @@ body {
   display: none;
 }
 
+@media screen and (min-width: 1440px) {
+  .cabecalho {
+    background-color: #1d232a;
+    display: grid;
+    column-gap: 32px;
+    grid-template-columns: 1fr auto;
+    padding: 16px 60px;
+    height: 80px;
+    box-sizing: border-box;
+    grid-column: 2;
+  }
+
+  .cabecalho__menu {
+    display: none;
+  }
+
+  .cabecalho__logo {
+    display: none;
+  }
+
+  .cabecalho__perfil {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    column-gap: 8px;
+    align-items: center;
+    justify-self: flex-end;
+    color: #95999c;
+    padding: 8px 32px;
+    border-right: 1px solid #95999c;
+  }
+
+  .cabecalho__perfil::before {
+    content: "";
+    display: block;
+    width: 32px;
+    height: 32px;
+    background-image: url(../img/profile_2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .cabecalho__perfil::after {
+    content: "\e90d";
+    color: #ffffff;
+    font-size: 1.5rem;
+  }
+}
+
 .menu-lateral {
   display: flex;
   flex-direction: column;
   background-color: #15191c;
   width: 75vw;
   height: 100vh;
+
   position: absolute;
   left: -100vw;
-  transition: 0.5s all;
+  transition: 0.25s;
 }
 
 .menu-lateral--ativo {
   left: 0;
+  transition: 0.25s;
 }
 
 .menu-lateral__logo {
+  width: 118px;
   align-self: center;
-  width: 110px;
   padding: 16px;
 }
 
@@ -68,13 +125,13 @@ body {
 }
 
 .menu-lateral__link--ativo {
-  color: #fff;
+  color: #ffffff;
   padding-left: 56px;
-  border-left: 8px solid #fff;
+  border-left: 8px solid #ffffff;
 }
 
 .menu-lateral__link::before {
-  content: "";
+  content: "\e900";
   width: 24px;
   height: 24px;
   font-size: 24px;
@@ -106,6 +163,15 @@ body {
   content: "\e90a";
 }
 
+@media screen and (min-width: 1440px) {
+  .menu-lateral {
+    position: static;
+    width: 200px;
+    grid-column: 1;
+    grid-row: 1 / span 2;
+  }
+}
+
 .principal {
   padding: 24px 16px;
   display: grid;
@@ -114,7 +180,32 @@ body {
 
 .titulo-pagina {
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 700;
+}
+
+.titulo-secao {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+@media screen and (min-width: 1440px) {
+  .principal {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-template-areas:
+      "titulo-pagina titulo-pagina titulo-pagina"
+      "destaque-video destaque-video videos-recentes"
+      "secao-videos secao-videos secao-videos"
+      "produtos-recentes destaque-produtos destaque-produtos"
+      "secao-produtos secao-produtos secao-produtos";
+    column-gap: 32px;
+    padding: 16px 60px;
+    grid-column: 2;
+  }
+
+  .titulo-secao {
+    grid-column: span 4;
+  }
 }
 
 .cartao {
@@ -122,6 +213,10 @@ body {
   border-radius: 15px;
   overflow: hidden;
   background-color: #2c343a;
+}
+
+.cartao__imagem--desktop {
+  display: none;
 }
 
 .cartao--destaque {
@@ -141,7 +236,7 @@ body {
 
 .cartao__titulo {
   font-size: 1.2rem;
-  font-weight: bold;
+  font-weight: 700;
   grid-column: span 2;
 }
 
@@ -197,72 +292,24 @@ body {
   display: none;
 }
 
-.secao {
-  display: grid;
-  gap: 16px;
-}
-
-.titulo-secao {
-  font-size: 1.2rem;
-  font-weight: bold;
-}
-
 @media screen and (min-width: 1440px) {
-  body {
-    display: grid;
-    grid-template-columns: auto 1fr;
+  .cartao--destaque {
+    margin-bottom: 0;
   }
-  .cabecalho {
-    background-color: #1d232a;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    padding: 16px 60px;
-    height: 80px;
-    column-gap: 32px;
-    grid-column: 2;
-  }
-  .cabecalho__menu,
-  .cabecalho__logo {
+
+  .cartao__imagem--mobile {
     display: none;
   }
-  .cabecalho__perfil {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    column-gap: 8px;
-    align-items: center;
-    justify-self: flex-end;
-    color: #95999c;
-    padding: 8px 32px;
-    border-right: 1px solid #95999c;
-  }
-  .cabecalho__perfi::before {
-    content: "";
+
+  .cartao__imagem--desktop {
     display: block;
-    width: 32px;
-    height: 32px;
-    background-image: url(../img/profile_2.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
   }
-  .cabecalho__perfil::after {
-    content: "\e90d";
-    color: #fff;
-    font-size: 1.5rem;
+
+  .cartao__botao--destaque {
+    grid-column: auto;
+    padding: 16px 8px;
   }
-  .menu-lateral {
-    position: static;
-    width: 200px;
-    grid-column: 1;
-    grid-row: 1 / span 2;
-  }
-  .principal {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    column-gap: 32px;
-    padding: 16px 60px;
-    grid-column: 2;
-  }
+
   .cartao--recentes {
     display: grid;
     grid-template-columns: auto auto;
@@ -270,37 +317,81 @@ body {
     row-gap: 24px;
     width: 256px;
     padding: 16px;
+    box-sizing: border-box;
+    align-self: flex-start;
   }
+
   .cartao--recentes .cartao__titulo {
     grid-column: auto;
   }
+
   .cartao__link {
     font-size: 0.8rem;
     font-weight: 600;
     color: #0480dc;
     justify-self: flex-end;
   }
+
   .cartao__lista {
     display: grid;
     row-gap: 16px;
     grid-column: span 2;
   }
+
   .cartao__item {
     display: grid;
     grid-template-columns: auto 1fr;
     gap: 8px;
   }
+
   .cartao__item-thumbnail {
     width: 32px;
     grid-row: span 2;
   }
+
   .cartao__item-titulo {
     font-size: 0.9rem;
     line-height: 1.2rem;
-    font-weight: bold;
+    font-weight: 700;
   }
+
   .cartao__item-perfil {
     font-size: 0.8rem;
     color: #95999c;
+  }
+}
+
+.secao {
+  display: grid;
+  gap: 16px;
+}
+
+@media screen and (min-width: 1440px) {
+  .secao {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .destaque-video {
+    grid-area: destaque-video;
+  }
+
+  .videos-recentes {
+    grid-area: videos-recentes;
+  }
+
+  .secao-videos {
+    grid-area: secao-videos;
+  }
+
+  .destaque-produtos {
+    grid-area: destaque-produtos;
+  }
+
+  .produtos-recentes {
+    grid-area: produtos-recentes;
+  }
+
+  .secao-produtos {
+    grid-area: secao-produtos;
   }
 }
